--- a/playground/app/components/examples/examples.component.html
+++ b/playground/app/components/examples/examples.component.html
@@ -1,4 +1,4 @@
-<fs-examples title="[Component]" githubUrl="https://github.com/Firestitch/[repo-name]" npmUrl="https://www.npmjs.com/package/@firestitch/[repo-name]">
+<fs-examples title="Tree" githubUrl="https://github.com/Firestitch/ngx-tree" npmUrl="https://www.npmjs.com/package/@firestitch/tree">
   <fs-example title="Example" componentName="example">
       <example></example>
   </fs-example>
