--- a/src/app/components/fs-component/fs-component.component.html
+++ b/src/app/components/fs-component/fs-component.component.html
@@ -1,3 +1,64 @@
-<b>fs-component.component.html</b>
-<div>Template goes here</div>
+<mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
+  <mat-tree-node *matTreeNodeDef="let node"
+                 matTreeNodeToggle
+                 matTreeNodePadding>
+    <div
+      class="node"
+      draggable="true"
+      (dragstart)="handleDragStart($event, node);"
+      (dragover)="handleDragOver($event, node);"
+      (drop)="handleDrop($event, node);"
+      (dragend)="handleDragEnd($event);"
+      [ngClass]="{'drop-above': dragNodeExpandOverArea === 'above' && dragNodeExpandOverNode === node,
+                'xdrop-below': dragNodeExpandOverArea === 'below' && dragNodeExpandOverNode === node,
+                'drop-center': dragNodeExpandOverArea === 'center' && dragNodeExpandOverNode === node}">
+      <div class="drop-indicator"></div>
+      <div class="container">
+        <button mat-icon-button disabled></button>
+        <mat-checkbox class="checklist-leaf-node"
+                      [checked]="checklistSelection.isSelected(node)"
+                      (change)="checklistSelection.toggle(node);">{{node.item}}</mat-checkbox>
+      </div>
+    </div>
+  </mat-tree-node>
 
+  <!-- <mat-tree-node *matTreeNodeDef="let node; when: hasNoContent" matTreeNodePadding>
+    <button mat-icon-button disabled></button>
+    <mat-form-field>
+      <input matInput #itemValue placeholder="New item...">
+    </mat-form-field>
+    <button mat-button (click)="saveNode(node, itemValue.value)">Save</button>
+  </mat-tree-node> -->
+
+  <mat-tree-node *matTreeNodeDef="let node; when: hasChild"
+                 matTreeNodePadding>
+    <div
+      class="node"
+      draggable="true"
+      (dragstart)="handleDragStart($event, node);"
+      (dragover)="handleDragOver($event, node);"
+      (drop)="handleDrop($event, node);"
+      (dragend)="handleDragEnd($event);"
+      [ngClass]="{'drop-above': dragNodeExpandOverArea === 'above' && dragNodeExpandOverNode === node,
+                  'sdrop-below': dragNodeExpandOverArea === 'below' && dragNodeExpandOverNode === node,
+                  'drop-center': dragNodeExpandOverArea === 'center' && dragNodeExpandOverNode === node}">
+      <div class="drop-indicator"></div>
+      <div class="container">
+        <button mat-icon-button matTreeNodeToggle
+              [attr.aria-label]="'toggle ' + node.filename">
+          <mat-icon class="mat-icon-rtl-mirror">
+            {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
+          </mat-icon>
+        </button>
+        <mat-checkbox
+
+                      [checked]="descendantsAllSelected(node)"
+                      [indeterminate]="descendantsPartiallySelected(node)"
+                      (change)="todoItemSelectionToggle(node)">{{node.item}}</mat-checkbox>
+        <!-- <button mat-icon-button (click)="addNewItem(node)"><mat-icon>add</mat-icon></button> -->
+      </div>
+    </div>
+  </mat-tree-node>
+</mat-tree>
+
+<span #emptyItem></span>
