--- a/src/app/components/fs-component/fs-component.component.scss
+++ b/src/app/components/fs-component/fs-component.component.scss
@@ -1,16 +1,8 @@
-.drop-above {
- /*
-  border-top: 20px solid #dddddd;
-  margin-top: -20px;
-  */
+.mat-checkbox {
+  margin-right: 10px;
 }
 
 .drop-above {
-  /*
-  border-bottom: 20px solid #dddddd;
-  margin-bottom: -20px;
-  */
-
   .drop-indicator {
     visibility: visible;
   }
