FS-T682 added config

--- a/playground/app/app.component.html
+++ b/playground/app/app.component.html
@@ -1,1 +1,9 @@
-<example></example>
+<fs-examples title="Tree" githubUrl="https://github.com/Firestitch/ngx-tree" npmUrl="https://www.npmjs.com/package/@firestitch/tree">
+  <fs-example title="Full example" componentName="example">
+    <example></example>
+  </fs-example>
+
+  <fs-example title="Limit and Without Selection" componentName="levels-limit">
+    <levels-limit></levels-limit>
+  </fs-example>
+</fs-examples>
