--- a/playground/app/components/levels-limit/levels-limit.component.html
+++ b/playground/app/components/levels-limit/levels-limit.component.html
@@ -1,3 +1,4 @@
+<p>With max depth 2 and without selection</p>
 <fs-tree [config]="config">
   <ng-template fsTreeNode let-data="data">
     {{data}}
