--- a/playground/app/components/levels-limit/levels-limit.component.html
+++ b/playground/app/components/levels-limit/levels-limit.component.html
@@ -1,5 +1,10 @@
+<div style="float: right">
+  <button mat-raised-button color="primary" (click)="collapseAll()">Collapse All</button>
+  &nbsp;
+  <button mat-raised-button color="primary" (click)="expandAll()">Expand All</button>
+</div>
 <p>With max depth 2 and without selection</p>
-<fs-tree [config]="config">
+<fs-tree [config]="config" #tree>
   <ng-template fsTreeNode let-data="data">
     {{data}}
   </ng-template>
