--- a/playground/app/components/levels-limit/levels-limit.component.html
+++ b/playground/app/components/levels-limit/levels-limit.component.html
@@ -1,4 +1,6 @@
 <div style="float: right">
+  <button mat-raised-button color="primary" (click)="createRootNode()">Create new Level 1 Object</button>
+  &nbsp;
   <button mat-raised-button color="primary" (click)="collapseAll()">Collapse All</button>
   &nbsp;
   <button mat-raised-button color="primary" (click)="expandAll()">Expand All</button>
