--- a/src/app/components/tree/tree.component.html
+++ b/src/app/components/tree/tree.component.html
@@ -1,19 +1,15 @@
 <mat-tree [dataSource]="dataSource" [treeControl]="treeControl" [ngClass]="{ 'blocked': blocked }">
   <mat-tree-node *matTreeNodeDef="let node"
                  matTreeNodeToggle
-                 matTreeNodePadding>
+                 matTreeNodePadding
+                 [fsDraggableNode]="node">
     <div class="node"
-         [draggable]="reorder"
-         (dragstart)="handleDragStart($event, node);"
-         (dragover)="handleDragOver($event, node);"
-         (drop)="handleDrop($event, node);"
-         (dragend)="handleDragEnd($event);"
+         fsDraggableNodeContent
          [ngClass]="{
             'drop-above': drag.expandOverArea === 'above' && drag.expandOverNode === node,
             'drop-center': drag.expandOverArea === 'center' && drag.expandOverNode === node,
             'drop-below': drag.expandOverArea === 'below' && drag.expandOverNode === node
           }">
-      <div class="drop-indicator"></div>
       <div class="container">
         <button mat-icon-button disabled></button>
 
@@ -22,33 +18,28 @@
                       [checked]="checklistSelection.isSelected(node)"
                       (change)="checklistSelection.toggle(node);">
         </mat-checkbox>
-        <div class="content">
+        <div class="content" fsDraggableNodeTarget>
           <ng-template
             [ngTemplateOutlet]="nodeTemplate || defaultNodeTemplate"
             [ngTemplateOutletContext]="node.data"
           ></ng-template>
-
-          <fs-node-actions [actions]="actions" [node]="node">
-          </fs-node-actions>
         </div>
+        <fs-node-actions [actions]="actions" [node]="node">
+        </fs-node-actions>
       </div>
     </div>
   </mat-tree-node>
 
   <mat-tree-node *matTreeNodeDef="let node; when: hasChild"
-                 matTreeNodePadding>
+                 matTreeNodePadding
+                 [fsDraggableNode]="node">
     <div class="node"
-         [draggable]="reorder"
-         (dragstart)="handleDragStart($event, node);"
-         (dragover)="handleDragOver($event, node);"
-         (drop)="handleDrop($event, node);"
-         (dragend)="handleDragEnd($event);"
+         fsDraggableNodeContent
          [ngClass]="{
             'drop-above': drag.expandOverArea === 'above' && drag.expandOverNode === node,
             'drop-center': drag.expandOverArea === 'center' && drag.expandOverNode === node,
             'drop-below': drag.expandOverArea === 'below' && drag.expandOverNode === node
           }">
-      <div class="drop-indicator"></div>
       <div class="container">
         <button mat-icon-button
                 (click)="toggleNode(node)"
@@ -63,15 +54,14 @@
           [indeterminate]="descendantsPartiallySelected(node)"
           (change)="todoItemSelectionToggle(node)">
         </mat-checkbox>
-        <div class="content">
+        <div class="content" fsDraggableNodeTarget>
           <ng-template
             [ngTemplateOutlet]="nodeTemplate || defaultNodeTemplate"
             [ngTemplateOutletContext]="node.data"
           ></ng-template>
-
-          <fs-node-actions *ngIf="actions.length > 0" [actions]="actions" [node]="node">
-          </fs-node-actions>
         </div>
+        <fs-node-actions *ngIf="actions.length > 0" [actions]="actions" [node]="node">
+        </fs-node-actions>
       </div>
     </div>
   </mat-tree-node>
