--- a/src/app/components/tree/tree.component.scss
+++ b/src/app/components/tree/tree.component.scss
@@ -32,7 +32,7 @@
       display: flex;
       flex-direction: row;
       align-items: center;
-      cursor: grab;
+      //cursor: grab;
     }
   }
 }
