fixed drop highlight area

--- a/src/app/components/tree/tree.component.html
+++ b/src/app/components/tree/tree.component.html
@@ -5,8 +5,7 @@
                  [fsDraggableNode]="node"
                  [fsCanDrop]="config.canDrop"
                  (dragStart)="onDragStart($event)"
-                 (drop)="onDrop($event)"
-                 (dragOver)="expandNode($event)">
+                 (drop)="onDrop($event)">
     <div class="node" fsDraggableNodeContent>
       <div class="container">
         <button mat-icon-button disabled></button>
@@ -33,8 +32,7 @@
                  [fsDraggableNode]="node"
                  [fsCanDrop]="config.canDrop"
                  (dragStart)="onDragStart($event)"
-                 (drop)="onDrop($event)"
-                 (dragOver)="expandNode($event)">
+                 (drop)="onDrop($event)">
     <div class="node" fsDraggableNodeContent>
       <div class="container">
         <button mat-icon-button
