used primary color to indicate drag location Also hid certain elements while dragging to remove clutter.

--- a/playground/styles.scss
+++ b/playground/styles.scss
@@ -1,3 +1,8 @@
 @import '../tools/assets/playground.scss';
 @import '~ngx-toastr/toastr.css';
 @import '../src/app/styles.scss';
+
+
+@include mat-core();
+
+@include fs-tree($mat-blue);
