TAD-T16 added sort method for three, method canDrag and fixed some bugs

--- a/playground/app/app.component.html
+++ b/playground/app/app.component.html
@@ -6,4 +6,16 @@
   <fs-example title="Limit and Without Selection" componentName="levels-limit">
     <levels-limit></levels-limit>
   </fs-example>
+
+  <fs-example title="1st-Level Fixed Order, 2nd-Level Manage Order" componentName="fixed-manage-ordering">
+    <fixed-manage-ordering></fixed-manage-ordering>
+  </fs-example>
+
+  <fs-example title="1st-Level Manage Order, 2nd-Level Fixed Order" componentName="manage-fixed-ordering">
+    <manage-fixed-ordering></manage-fixed-ordering>
+  </fs-example>
+
+  <fs-example title="1st-Level Fixed Order, 2nd-Level Fixed Order" componentName="fixed-fixed-ordering">
+    <fixed-fixed-ordering></fixed-fixed-ordering>
+  </fs-example>
 </fs-examples>
