--- a/playground/app/components/fixed-fixed-ordering/fixed-fixed-ordering.component.html
+++ b/playground/app/components/fixed-fixed-ordering/fixed-fixed-ordering.component.html
@@ -1,9 +1,9 @@
 <div style="float: right">
+  <button mat-raised-button (click)="expandAll()">Expand All</button>
+  &nbsp;
+  <button mat-raised-button (click)="collapseAll()">Collapse All</button>
+  &nbsp;
   <button mat-raised-button color="primary" (click)="createRootNode()">Create new Level 1 Object</button>
-  &nbsp;
-  <button mat-raised-button color="primary" (click)="collapseAll()">Collapse All</button>
-  &nbsp;
-  <button mat-raised-button color="primary" (click)="expandAll()">Expand All</button>
 </div>
 
 <p>With max depth 2 and without selection</p>
