--- a/playground/app/components/example/example.component.html
+++ b/playground/app/components/example/example.component.html
@@ -5,6 +5,6 @@
 </div>
 <fs-tree [config]="config" #tree>
   <ng-template fsTreeNode let-id="id" let-name="name" let-level="level">
-    {{ name }} (ID: {{ id }}) {{level}}
+    {{ name }} (ID: {{ id }})
   </ng-template>
 </fs-tree>
