--- a/playground/app/app.component.html
+++ b/playground/app/app.component.html
@@ -1,21 +1,21 @@
-<fs-examples title="Tree" githubUrl="https://github.com/Firestitch/ngx-tree" npmUrl="https://www.npmjs.com/package/@firestitch/tree">
+<fs-examples [config]="config">
   <fs-example title="Full example" componentName="example">
     <example></example>
   </fs-example>
 
-  <fs-example title="Limit and Without Selection" componentName="levels-limit">
+  <fs-example name="Limit and Without Selection" componentName="levels-limit">
     <levels-limit></levels-limit>
   </fs-example>
 
-  <fs-example title="1st-Level Fixed Order, 2nd-Level Manage Order" componentName="fixed-manage-ordering">
+  <fs-example name="1st-Level Fixed Order, 2nd-Level Manage Order" componentName="fixed-manage-ordering">
     <fixed-manage-ordering></fixed-manage-ordering>
   </fs-example>
 
-  <fs-example title="1st-Level Manage Order, 2nd-Level Fixed Order" componentName="manage-fixed-ordering">
+  <fs-example name="1st-Level Manage Order, 2nd-Level Fixed Order" componentName="manage-fixed-ordering">
     <manage-fixed-ordering></manage-fixed-ordering>
   </fs-example>
 
-  <fs-example title="1st-Level Fixed Order, 2nd-Level Fixed Order" componentName="fixed-fixed-ordering">
+  <fs-example name="1st-Level Fixed Order, 2nd-Level Fixed Order" componentName="fixed-fixed-ordering">
     <fixed-fixed-ordering></fixed-fixed-ordering>
   </fs-example>
 </fs-examples>
