--- a/playground/app/app.component.html
+++ b/playground/app/app.component.html
@@ -1,5 +1,5 @@
 <fs-examples [config]="config">
-  <fs-example title="Full example" componentName="example">
+  <fs-example name="Full example" componentName="example">
     <example></example>
   </fs-example>
 
