TAD-T1577 implement fs-menu features

--- a/src/app/components/node-actions/node-actions.component.html
+++ b/src/app/components/node-actions/node-actions.component.html
@@ -3,8 +3,25 @@
   <ng-container *ngSwitchCase="0">
     <fs-menu>
       <ng-container *ngFor="let item of action.items">
-        <ng-container *ngIf="item.show(node)">
-          <ng-template fs-menu-item (click)="item.click(node)">
+        <ng-container *ngIf="item.isGroup">
+          <fs-menu-group [label]="item.label">
+            <ng-container *ngFor="let subItem of item.children">
+              <ng-template fs-menu-item
+                           (click)="subItem.click(node)"
+                           [link]="subItem.routerLink?.link"
+                           [queryParams]="subItem.routerLink?.queryParams"
+                           [hidden]="!subItem.visible">
+                {{ subItem.label }}
+              </ng-template>
+            </ng-container>
+          </fs-menu-group>
+        </ng-container>
+        <ng-container *ngIf="!item.isGroup">
+          <ng-template fs-menu-item
+                       (click)="item.click(node)"
+                       [link]="item.routerLink?.link"
+                       [queryParams]="item.routerLink?.queryParams"
+                       [hidden]="!item.visible">
             {{ item.label }}
           </ng-template>
         </ng-container>
