--- a/src/app/components/tree/tree.component.html
+++ b/src/app/components/tree/tree.component.html
@@ -4,6 +4,7 @@
   <mat-tree-node *matTreeNodeDef="let node"
                  matTreeNodeToggle
                  matTreeNodePadding
+                 [ngClass]="treeNodeData?.klass"
                  [fsDraggableNode]="node"
                  [fsCanDrop]="tree.config.canDrop"
                  (dragStart)="tree.onDragStart($event)"
@@ -19,7 +20,7 @@
         </mat-checkbox>
         <div class="content" [ngClass]="{'no-drag': !node.canDrag}" fsDraggableNodeTarget>
           <ng-template
-            [ngTemplateOutlet]="nodeTemplate || defaultNodeTemplate"
+            [ngTemplateOutlet]="treeNodeData?.templateRef || defaultNodeTemplate"
             [ngTemplateOutletContext]="node.templateContext"
           ></ng-template>
         </div>
@@ -31,6 +32,7 @@
 
   <mat-tree-node *matTreeNodeDef="let node; when: hasChild"
                  matTreeNodePadding
+                 [ngClass]="treeNodeData?.klass"
                  [fsDraggableNode]="node"
                  [fsCanDrop]="tree.config.canDrop"
                  (dragStart)="tree.onDragStart($event)"
@@ -52,7 +54,7 @@
         </mat-checkbox>
         <div class="content" [ngClass]="{ 'no-drag': !node.canDrag }" fsDraggableNodeTarget>
           <ng-template
-            [ngTemplateOutlet]="nodeTemplate || defaultNodeTemplate"
+            [ngTemplateOutlet]="treeNodeData?.templateRef || defaultNodeTemplate"
             [ngTemplateOutletContext]="node.templateContext"
           ></ng-template>
         </div>
