SP-T1715 add nodeClass config callback for flexible adding node classes

--- a/src/app/components/tree/tree.component.html
+++ b/src/app/components/tree/tree.component.html
@@ -4,6 +4,7 @@
   <mat-tree-node *matTreeNodeDef="let node"
                  matTreeNodeToggle
                  matTreeNodePadding
+                 fsTreeNodeClass
                  [ngClass]="treeNodeData?.klass"
                  [fsDraggableNode]="node"
                  [fsCanDrop]="tree.config.canDrop"
@@ -32,6 +33,7 @@
 
   <mat-tree-node *matTreeNodeDef="let node; when: hasChild"
                  matTreeNodePadding
+                 fsTreeNodeClass
                  [ngClass]="treeNodeData?.klass"
                  [fsDraggableNode]="node"
                  [fsCanDrop]="tree.config.canDrop"
