DT-T1137 allow listening for node click

--- a/src/app/components/tree/tree.component.html
+++ b/src/app/components/tree/tree.component.html
@@ -38,7 +38,8 @@
                  [fsDraggableNode]="node"
                  [fsCanDrop]="tree.config.canDrop"
                  (dragStart)="tree.onDragStart($event)"
-                 (drop)="tree.onDrop($event)">
+                 (drop)="tree.onDrop($event)"
+                 (draggableClick)="tree.nodeClick($event)">
     <div class="node" fsDraggableNodeContent>
       <div class="container">
         <button mat-icon-button
