--- a/playground/app/app.component.html
+++ b/playground/app/app.component.html
@@ -3,6 +3,10 @@
     <example></example>
   </fs-example>
 
+  <fs-example name="Actions" componentName="actions">
+    <actions></actions>
+  </fs-example>
+
   <fs-example name="Limit and Without Selection" componentName="levels-limit">
     <levels-limit></levels-limit>
   </fs-example>
