DT-T1137 update behaviour for drag&drop functionality and also for node click

--- a/playground/app/app.component.html
+++ b/playground/app/app.component.html
@@ -3,7 +3,7 @@
     <example></example>
   </fs-example>
 
-  <fs-example name="Actions" componentName="actions">
+  <fs-example name="Editable nodes" componentName="actions">
     <actions></actions>
   </fs-example>
 
