moved primary styling to the app layer

--- a/playground/styles.scss
+++ b/playground/styles.scss
@@ -6,3 +6,10 @@
 @include mat-core();
 
 @include fs-tree($mat-blue);
+
+mat-tree {
+  a.primary {
+    font-weight: bold;
+    font-size: 101%;
+  }
+}
